--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,20 +8,41 @@ set(CMAKE_CXX_FLAGS "-Wall -g -std=c++11")
 ### EXTERNAL LIBRARIES ###
 
 ##GTEST AND GMOCK
-ExternalProject_Add(project_gtest
-    GIT_REPOSITORY https://github.com/danielsaad/googletest
-    PREFIX "project_gtest"
+INCLUDE(ExternalProject)
+
+# Set default ExternalProject root directory
+SET_DIRECTORY_PROPERTIES(PROPERTIES EP_PREFIX ${CMAKE_BINARY_DIR}/third_party)
+
+# Add gtest
+# http://stackoverflow.com/questions/9689183/cmake-googletest
+ExternalProject_Add(
+    googletest
+    URL http://googletest.googlecode.com/files/gtest-1.6.0.zip
+    # TIMEOUT 10
+    # # Force separate output paths for debug and release builds to allow easy
+    # # identification of correct lib in subsequent TARGET_LINK_LIBRARIES commands
+    # CMAKE_ARGS -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG:PATH=DebugLibs
+    #            -DCMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE:PATH=ReleaseLibs
+    #            -Dgtest_force_shared_crt=ON
+    # Disable install step
     INSTALL_COMMAND ""
-)
+    # Wrap download, configure and build steps in a script to log output
+    LOG_DOWNLOAD ON
+    LOG_CONFIGURE ON
+    LOG_BUILD ON)
 
-ExternalProject_Get_Property(project_gtest install_dir)
-add_library(lib_gmock STATIC IMPORTED)
-add_library(lib_gtest STATIC IMPORTED)
-set_property(TARGET lib_gmock PROPERTY IMPORTED_LOCATION ${install_dir}/src/project_gtest/project_gtest-build/googlemock/libmock.a)
-set_property(TARGET lib_gtest PROPERTY IMPORTED_LOCATION ${install_dir}/src/project_gtest/project_gtest-build/googlemock/gtest/libgtest.a)
-add_dependencies(lib_gtest project_gtest)
-add_dependencies(lib_gmock project_gtest)
-include_directories(${install_dir}/src/project_gtest/googletest/include)
-include_directories(${install_dir}/src/project_gtest/googlemock/include)
+# Specify include dir
+ExternalProject_Get_Property(googletest source_dir)
+set(GTEST_INCLUDE_DIR ${source_dir}/include)
 
-add_subdirectory(test)
+# Library
+ExternalProject_Get_Property(googletest binary_dir)
+set(GTEST_LIBRARY_PATH ${binary_dir}/${CMAKE_FIND_LIBRARY_PREFIXES}gtest.a)
+set(GTEST_LIBRARY gtest)
+add_library(${GTEST_LIBRARY} UNKNOWN IMPORTED)
+set_property(TARGET ${GTEST_LIBRARY} PROPERTY IMPORTED_LOCATION
+                ${GTEST_LIBRARY_PATH} )
+add_dependencies(${GTEST_LIBRARY} googletest)
+include_directories(${GTEST_INCLUDE_DIR})
+include_directories(${CMAKE_SOURCE_DIR})
+add_subdirectory(gtest)
